--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <div>ARFindMe</div>
+<meta http-equiv="refresh" content="0; url=/main.html">
 <h2 id="askToStart">Press Start to start the game.</h2>
 <h3 id="instructions">Decide who will be player 1 and player 2. You will be asked to show an item. Find it, show it, get points, win. Good luck!</h3>
 <button type="button" id="startButton" onclick="init()">Start</button>
