--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/LyDp8TwhQ/";
+    const URL = "https://teachablemachine.withgoogle.com/models/xzqVqB3Y0/";
 
     let model, webcam;
 
